crates/strider-analyze/tests/snapshots/v3__arm_thumb__patterns__if_returns_const.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v7" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v7" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="φ r0", shape=house, fillcolor="#163030"];
  "10" -> "13" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x64:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="φ r0", shape=house, fillcolor="#163030"];
  "5" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "20" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xffffffce:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="init\nr0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "21" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "27" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "29" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "29" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "23" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
