crates/strider-analyze/tests/snapshots/v3__arm_thumb__patterns__main.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x540:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x548:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v13" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "9" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "15" -> "9" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" -> "9" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "16" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "9" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x55c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "16" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v20" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v20" [color="#888888", style=dashed];
  "v20" -> "16" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v21" [color="#888888", style=dashed];
  "v21" -> "16" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "22" -> "16" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "22" -> "16" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "23" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "16" -> "23" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x568:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "23" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "27" -> "23" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v28" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "16" -> "v28" [color="#888888", style=dashed];
  "v28" -> "23" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "29" -> "23" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "29" -> "23" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "30" -> "23" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "23" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x580:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "31" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" -> "31" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v36" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "23" -> "v36" [color="#888888", style=dashed];
  "v36" -> "31" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "37" -> "31" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "37" -> "31" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "38" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "31" -> "38" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v41" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v41" [color="#888888", style=dashed];
  "v41" -> "38" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v42" [color="#888888", style=dashed];
  "v42" -> "38" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v43" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v43" [color="#888888", style=dashed];
  "v43" -> "38" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "40" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v44" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "31" -> "v44" [color="#888888", style=dashed];
  "v44" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "31" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "46" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "31" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v49" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v49" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v36" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "23" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "50" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "32" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "23" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v51" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v51" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v28" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "16" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "52" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "26" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x1ffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "54" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "16" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "54" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "57" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v21" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "58" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "9" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v14" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "60" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "10" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "1" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v61" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v61" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "62" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v63" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v63" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "64" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "65" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "62" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "67" -> "62" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "65" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "68" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v69" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v69" -> "65" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "70" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "68" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "71" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "68" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "73" -> "68" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "71" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
