crates/strider-analyze/tests/snapshots/v3__arm_thumb__patterns__recursive_with_accumulator.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x580:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "12" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v13" [color="#888888", style=dashed];
  "v13" -> "12" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v15" [color="#888888", style=dashed];
  "v15" -> "12" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v16" [color="#888888", style=dashed];
  "v16" -> "12" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="init\nr0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "20" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "21" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "23" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v2" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "26" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "17" -> "26" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "29" -> "26" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "29" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "25" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "37" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
